Class 4 List Tuple

--- a/class3.ipynb
+++ b/class3.ipynb
@@ -564,426 +564,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MemberShip Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['Qasim', 'Hamza', 'Junaid', 'Abid']\n",
+    "for name in names:\n",
+    "    if(name==\"Qasim\"):\n",
+    "        print(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2!=2"
+    "\"Qasim\" in names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-7b71b7e14fa1>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-7b71b7e14fa1>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    [2,2] <> [2,3]\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "[2,2] <> [2,3]"
+    "\"Ali\" not in names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I live in Pakistan\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "\"Pakistan\" in a               #in is short for for each or filter"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment Operators"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "=\n",
-    "+=\n",
-    "*=\n",
-    "/=\n",
-    "**=\n",
-    "/=\n",
-    "//=\n",
-    "%="
+    "#Identity Operator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 5\n",
-    "a=6\n",
-    "a=7\n",
-    "a=8"
+    "#Control Flow\n",
+    "#if else elif"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=1\n",
-    "a+=2\n",
-    "a+=3\n",
-    "a+=4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a=1\n",
-    "a-=2\n",
-    "a-=3\n",
-    "a-=4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-8"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = \"ABC\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ABC\n"
+      "Pakistan\n"
      ]
     }
    ],
    "source": [
-    "print(a)"
+    "if True:\n",
+    "    print(\"Pakistan\")\n",
+    "else:\n",
+    "    print(\"Zindaabad\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pakistan\n",
+      "Pakistan\n",
+      "Pakistan\n",
+      "Pakistan\n"
+     ]
+    }
+   ],
+   "source": [
+    "if True:\n",
+    "    print(\"Pakistan\")\n",
+    "    print(\"Pakistan\")\n",
+    "    print(\"Pakistan\")\n",
+    "    print(\"Pakistan\")\n",
+    "else:\n",
+    "    print(\"Zindaabad\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Logical Operator"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "and &\n",
-    "or = |\n",
-    "not !=, <>"
+    "#Comprehensive"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user = \"Qasim\"\n",
-    "passw = \"ali123\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "'Pakistan'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "user == \"Qasim\""
+    "\"Pakistan\" if True else \"Zindabad\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "'Zindabad'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "passw == \"ali123\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = \"A\"\n",
-    "b = \"B\"\n",
-    "c = \"C\"\n",
-    "print((a==\"A\") & (b==\"B\") & (c==\"C\"))      #because of pemdas\n",
-    "\n",
-    "print(a==\"A\" and b==\"B\" and c==\"C\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = \"a\"\n",
-    "b = \"b\"\n",
-    "c = \"C\"\n",
-    "print((a==\"A\") | (b==\"B\") | (c==\"C\"))      #because of pemdas\n",
-    "\n",
-    "print(a==\"A\" or b==\"B\" or c==\"C\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Insert UsernameAJ\n",
-      "Insert Password123\n"
-     ]
-    }
-   ],
-   "source": [
-    "user  = input(\"Insert Username\")\n",
-    "password  = input(\"Insert Password\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "user == \"AJ\" and password == \"123\" and user == !"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "not(True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "not(False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "not(True and True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Bitwise Operator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8, 7, 6, 5, 4, 3, 2, 1, 0)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "8,  7,  6,  5,  4,  3,  2,  1,  0\n",
-    "2,  2,  2,  2,  2,  2,  2,  2,  2 \n",
-    "=================================\n",
-    "256,128,64, 32, 16, 8,  4,  2,  1"
+    "\"Pakistan\" if False else \"Zindabad\""
    ]
   },
   {
